# rpg-character-agents

./: .gitignore  README.md  dice.py  dnd_agent.py  encounter_agent.py  event_agent.py  firefly_agent.py  location_agent.py  main.py  names.py  npc_cluster_agent.py  party_agent.py  pyproject.toml  quick_build.py  rumor_agent.py  scum_agent.py  scum_villainy_agent.py  ship_agent.py  ships.py  spells.py  traveller_agent.py  utils.py
agents/: alien_agent.py  deadlands_agent.py  dnd_agent.py  encounter_agent.py  event_agent.py  firefly_agent.py  location_agent.py  npc_cluster_agent.py  party_agent.py  rumor_agent.py  scum_villainy_agent.py  ship_agent.py  traveller_agent.py
dnd_characters/: vaelinor-sennethyr-npc.md
firefly_characters/: imka-vorel-npc.md  kezia-halberd-ramos-full.md  liora-aldermere-sato-full.md  wen-halberd-ramos-character.md  wend-saro-calder-n-npc.md  wrenleigh-wren-aldermere-sato-character.md
lib/: aliens.py  dice.py  gear.py  names.py  psi.py  safety.py  ships.py  spells.py  synthetics.py  utils.py
parties/: dnd-the-hannox-detour-party.md  dnd-the-last-ride-party.md  firefly-the-hollow-verity-crew-brief-party.md  traveller-nighthawk-crew-brief-party.md  traveller-npc-family-the-maranatha-s-promise-and-its-passengers-party.md
scum_villainy_characters/: adaeze-vukoja-reins-full.md  wren-adeyemi-vasque-npc.md  yusra-okonkwo-vey-full.md
tests/: test_alien_rpg.py  test_aliens.py  test_deadlands.py  test_dice.py  test_dnd.py  test_encounter_agent.py  test_event_agent.py  test_firefly.py  test_gear.py  test_location_agent.py  test_main.py  (+13 more)
(+140 files in other folders)
